# mnyaoo32

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
esp/: esp-clang-toolchain.nix  esp-idf.nix  esp-idf.patch  esp-rom-elfs.nix  esp-toolchain.nix  esp-tools.nix  esp32ulp-elf.nix
src/: main.rs
