[package]
name = "mnyaoo32"
version = "0.1.0"
authors = ["Remigiusz Micielski <r.micielski@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.81"

[[bin]]
name = "mnyaoo32"
harness = false

[profile.release]
opt-level = 3

[profile.dev]
debug = true
opt-level = 3

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.51", features = [] }
esp-idf-sys = "0.36.0"
embedded-graphics = "0.8.1"
embedded-svc = "0.28.1"
mipidsi = "0.9.0"
embedded-hal = "1.0.0"
log = "*"
ratatui = { version = "0.29", default-features = false}
mousefood = "*"

[build-dependencies]
embuild = "0.33"
